[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 640.0
margin_bottom = 480.0
color = Color( 0.0627451, 0.027451, 0.482353, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblCelsius" type="Label" parent="ColorRect"]
margin_left = 30.0
margin_top = 30.0
margin_right = 262.0
margin_bottom = 44.0
text = "CELSIUS TEMPERATURE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TmpCelsius" type="SpinBox" parent="ColorRect"]
margin_left = 27.1664
margin_top = 52.4953
margin_right = 269.166
margin_bottom = 92.4953
min_value = -273.15
max_value = 1e+06
step = 0.1
value = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblFarenheit" type="Label" parent="ColorRect"]
margin_left = 333.251
margin_top = 30.0
margin_right = 565.251
margin_bottom = 46.3327
text = "MORONIC TEMPERATURE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TmpFarenheit" type="SpinBox" parent="ColorRect"]
margin_left = 333.917
margin_top = 52.4953
margin_right = 575.917
margin_bottom = 92.4953
min_value = -459.67
max_value = 1.80003e+06
step = 0.1
value = -40.0

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect"]
margin_left = 30.0
margin_top = 129.0
margin_right = 575.0
margin_bottom = 281.0
bbcode_enabled = true
text = "F := C * 9 / 5 + 32;

C := (F - 32) * 5 / 9;"
[connection signal="value_changed" from="ColorRect/TmpCelsius" to="." method="_on_TmpCelsius_value_changed"]
[connection signal="value_changed" from="ColorRect/TmpFarenheit" to="." method="_on_TmpFarenheit_value_changed"]
